--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "firebase": "^8.0.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
